# idp-actix-web-rust

./: .env.example  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: post.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20250707_100336_create_user_table.rs  m20250722_093558_create_post_table.rs
src/: main.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  post_routes.rs  user_routes.rs
src/routes/handlers/: auth_handler.rs  home_handler.rs  mod.rs  post_handler.rs  user_handler.rs
src/routes/middlewares/: auth_middleware.rs
src/utils/: api_response.rs  auth.rs  constants.rs  hash.rs  mod.rs
