[package]
name = "idp-actix-web-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
serde = "1.0.219"
serde_json = "1.0.140"
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
